test/fixtures/configs/projects/get/discoverByLanguage/fail/error.js
module.exports = {
  url: '/discover/en-US',
  method: 'get'
};
